# tinyDisplay

./: .gitignore  .isort.cfg  CLEANUP_SUMMARY.md  DEVELOPMENT.md  DSL_implementation.md  MIGRATION_README.md  NUMPY_REMOVAL_DECISION.md  PERFORMANCE_IMPROVEMENTS.md  README.md  README.rst  animation_effects_architecture.md  application_widget_dsl.md  complex_analysis.json  debug_bounce_test.py  dependency_manager_requirements.md  dsl_converter.py  image_comparison.html  legacy_analysis.json  marquee_class.dsl  marquee_class_dsl.md  marquee_class_dsl.md.backup  marquee_class_dsl.md.bak  marquee_demo.py  migration_generator.py  migration_tool.py  migration_validator.py  profile_collection.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup_dev.sh  test.yaml  test_animation_conversion.py  test_debug_eval.py  test_dsl_generation.py  test_enhanced_widgets.py  test_evaluator.py  test_marquee_validator.py  test_scroll_loop.py  (+8 more)
.github/: test.yml
.github/workflows/: test.yml
backups/: utility.py.bak
benchmarks/: performance_comparison.py  profile_collection.py
bmad-agent/data/: PM-handoff-summary.md  animation_effects_reference_updated.md  perplexity-data-layer-findings.md  perplexity-display-frameworks-findings-animation.md  perplexity-display-frameworks-findings.md  perplexity-templating-findings.md  tinyDisplay-PRD.md  tinyDisplay-competitive-analysis-research.md  tinyDisplay-data-layer-research.md  tinyDisplay-dynamic_value_analysis.md  tinyDisplay-project-brief.md  tinyDisplay-research-prompts-perplexity.md  tinyDisplay-research-prompts.md  tinyDisplay-research-summary.md
docs/: coordination-best-practices.md  epic-1-sprint-plan.md  epic-1.md  epic-2.md  epic-3.md  epic-4.md  global_dataset_safety.md  index.md  operational-guidelines.md  pi-zero-2w-testing-architecture.md  project-structure.md  story_3.1_final_completion_summary.md  task5_determinism_validation_completion.md  task6_performance_optimization_completion.md  tech-stack.md  tick-based-api-design.md  transaction_usage.md  widget-migration-strategy.md
docs/legacy-backup/: README.md  coordinated_marquees.md  dependency_tracking.md  dynamicvalue_migration.md  explicit_dependencies.md  migration_guide.md
docs/pageFiles/: pageFileExample.cfg
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  3.1.story.md  3.2.story.md  3.3.story.md  4.1.story.md
examples/: README.md  dynamic_values_demo.py  predictive_progress_demo.py  ring_buffer_demo.py  validation_demo.py
examples/scroll_examples/: down_clip_test.py
legacy-backup/: README.md
legacy-backup/root-files/: PERFORMANCE_IMPROVEMENTS.md  application_widget_dsl.md  dependency_manager_requirements_full.md  focused_comparison.html  marquee_class.dsl  marquee_class.rst  marquee_class_dsl.md  test_eval.py  test_migration.py
research/: distributed_coordination_investigation_plan.md  mathematical_determinism_investigation_plan.md  mathematical_determinism_results.md  tick_vs_time_analysis.md
src/tinydisplay/: __init__.py
td/: cfg.py  utility.py
td/render/: collection.py  widget.py
templates/: index.html
test_complex_migration_demo/: complex_legacy_app.py
test_complex_migration_output/: main.py
test_complex_migration_output/config/: data_config.py
test_complex_migration_output/data/: data_manager.py
test_complex_migration_output/dsl/: application.py
test_complex_migration_output/tests/: test_dynamic_values.py
test_complex_migration_output/widgets/: complexchart_widget.py
test_enhanced_complex_migration_output/config/: main_canvas_config.py  secondary_canvas_config.py  status_canvas_config.py
test_enhanced_complex_migration_output/reactive/: dynamic_values.py
test_enhanced_complex_migration_output/tests/: test_data_manager.py
test_final_complex_migration_output/: requirements.txt
test_final_complex_migration_output/dsl/: application.py
test_final_complex_migration_output/rendering/: canvas_manager.py  partial_update.py  speculative.py
test_final_complex_migration_output/tests/: test_rendering.py
test_final_complex_migration_output/widgets/: complexchartwidget_widget.py  container_widget.py  containerwidget_widget.py  customgauge_widget.py  customgaugewidget_widget.py  manager.py
test_large_migration_output/data/: ring_buffer.py  sqlite_storage.py
test_large_migration_output/dsl/: application.py
test_large_migration_output/reactive/: dependency_tracker.py
test_large_migration_output/rendering/: controller.py
test_large_migration_output/tests/: test_widgets.py
test_large_migration_output/widgets/: base.py  container_layout.py  counter_widget.py  custom_widgets.py  data_visualization_widgets.py  display_widgets.py  hierarchy_manager.py  makeanimation_widget.py  progress_widget.py  status_widget.py  subtitle_widget.py  t_widget.py  (+3 more)
test_migration_demo_migrated/: application.py
tests/: __init__.py  conftest.py  test_animate.py  test_canvas.py  test_cfg.py  test_coordinated_marquees.py  test_dataset.py  test_dataset_thread_safety.py  test_dataset_validation.py  test_dependency_simple.py  test_dependency_summary.py  test_dynamic_simple.py  test_dynamic_values.py  test_global_dataset.py  test_hash_dataset.py  test_image.py  test_json_to_dsl.py  test_line.py  test_marquee.py  test_marquee_deterministic.py  test_migration_validator.py  test_new_marquee.py  test_new_marquee_behaviors.py  test_progressBar.py  test_reactive_bindings.py  test_rectangle.py  test_scroll_clip_terminal.py  test_scroll_loop.py  test_selective_recalculation.py  test_sequence.py  test_text.py  test_tinydisplay.py  test_widget_buffer.py  test_widget_general.py  test_widget_timing.py  test_windows.py
tinyDisplay/: __init__.py  cfg.py  coordination.py  exceptions.py  font.py  utility.py
tinydisplay/: __init__.py  cfg.py  font.py  globalVars.py  utility.py
tools/: migrate_dynamic.py  migrate_dynamicvalue_removal.py  migrate_to_dynamicvalue.py
validation_reports/: dsl_validation_report.html  dsl_validation_report.json  dsl_validation_report.md  dsl_validation_summary.json
(+239 files in other folders)
