[tool.coverage.run]
branch = true
source = ['tinyDisplay']
omit = ['setup.py', 'docs/*', '.tox/*']

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = 'tinyDisplay'
known_third_party = ["PIL", "pytest", "simple_pid", "yaml"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.poetry]
name = "tinyDisplay"
version = "0.1.0"
description = ""
authors = ["dhrone <dhrone@dhrone.xyz>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pyyaml = "^5.3.1"
pillow = "^7.2.0"
simple-pid = "^0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6"
flake8 = "^3.8.3"
coverage = "^5.2.1"
pytest-cov = "^2.10.1"
tox = "^3.20.1"
isort = "^5.6.4"
black = "^20.8b1"
pre-commit = "^2.9.3"
darglint = "^1.5.8"
rstcheck = "^3.3.1"
"luma.emulator" = "^1.3.0"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra -v --cov=tinyDisplay --cov-report term --cov-report html"
testpaths = [
  "tests"
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{36,37,38},qa

[testenv]
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run pytest

[testenv:qa]
commands =
  poetry install -vvv
  poetry run flake8
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
