[tool.coverage.run]
branch = true
#source = ['tinydisplay']
omit = ['setup.py', 'docs/*', '.tox/*']

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = 'tinydisplay'
known_third_party = ["PIL", "flask", "pyattention", "pytest", "simple_pid", "yaml"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.poetry]
name = "tinyDisplay"
version = "0.1.0"
description = ""
authors = ["dhrone <dhrone@dhrone.xyz>"]

[tool.poetry.dependencies]
python = ">=^3.8.1,<3.11"
pyyaml = "^5.3.1"
simple-pid = "^0.2.4"
requests = "^2.25.1"
pillow = "^10.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6"
coverage = "^5.2.1"
pytest-cov = "^2.10.1"
tox = "^3.20.1"
pre-commit = "^2.9.3"
darglint = "^1.5.8"
rstcheck = "^3.3.1"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
Flask = "^2.0.1"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra -v --cov=tinydisplay --cov-report term --cov-report html"
testpaths = [
  "tests"
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{38},qa

[testenv]
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run pytest

[testenv:doc]
commands =
  sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir/html}
  poetry run
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
